@@ -108,19 +108,12 @@
 
 #if !defined (__PTW32_CONFIG_H) && !defined(__PTW32_PSEUDO_CONFIG_H_SOURCED)
 #  define __PTW32_PSEUDO_CONFIG_H_SOURCED
-/*
- * We define NEED_FTIME for all now. GetSystemTimeAsFileTime() is pretty
- * much universal now and consistently higher resolution than _ftime64().
- */
-#  define NEED_FTIME
-
 #  if defined(WINCE)
 #    undef  HAVE_CPU_AFFINITY
 #    define NEED_DUPLICATEHANDLE
 #    define NEED_CREATETHREAD
 #    define NEED_ERRNO
 #    define NEED_CALLOC
-#    define NEED_FTIME
 #    define NEED_UNICODE_CONSTS
 #    define NEED_PROCESS_AFFINITY_MASK
 /* This may not be needed */
