@@ -70,7 +70,6 @@ PTW32_AC_CHECK_TYPEDEF([struct timespec],[time.h])
 #
 PTW32_AC_NEED_ERRNO
 PTW32_AC_NEED_FUNC([NEED_CALLOC],[calloc])
-PTW32_AC_NEED_FUNC([NEED_FTIME],[ftime])
 PTW32_AC_NEED_FUNC([NEED_CREATETHREAD],[_beginthreadex])
 PTW32_AC_CHECK_CPU_AFFINITY
 
